@@ -35,6 +35,9 @@ Boston, MA 02111-1307, USA.  */
 #define STRINGIFY(s) _str(s)
 #define _str(s) #s
 
+#define IS_EEPROM (PROC_CLASS_EEPROM8 == state.device.class || PROC_CLASS_EEPROM16 == state.device.class)
+#define IS_BYTE   (IS_16BIT_CORE || IS_EEPROM)
+
 void
 lst_throw(void)
 {
@@ -207,7 +210,7 @@ lst_init(void)
 void
 lst_memory_map(MemBlock *m)
 {
-#define MEM_IS_USED(m, i)   (IS_16BIT_CORE ? ((m)->memory[i] & BYTE_USED_MASK) : (((m)->memory[2 * (i)] & BYTE_USED_MASK) || ((m)->memory[2 * (i) + 1] & BYTE_USED_MASK)))
+#define MEM_IS_USED(m, i)   (IS_BYTE ? ((m)->memory[i] & BYTE_USED_MASK) : (((m)->memory[2 * (i)] & BYTE_USED_MASK) || ((m)->memory[2 * (i) + 1] & BYTE_USED_MASK)))
 
   int i, j, base, row_used, num_per_line, num_per_block;
   unsigned int used;
@@ -221,10 +224,10 @@ lst_memory_map(MemBlock *m)
   num_per_block = 16;
 
   while (m) {
-    unsigned int max_mem = MAX_I_MEM  >> (!IS_16BIT_CORE);
+    unsigned int max_mem = MAX_I_MEM  >> !IS_BYTE;
     assert(m->memory != NULL);
 
-    base = (m->base << I_MEM_BITS) >> (!IS_16BIT_CORE);
+    base = (m->base << I_MEM_BITS) >> !IS_BYTE;
 
     for (i = 0; i < max_mem; i += num_per_line) {
       row_used = 0;
@@ -259,15 +262,21 @@ lst_memory_map(MemBlock *m)
   /* it seems that MPASM includes config bytes into program memory usage
    * count for 16 bit cores. See gpasm testsuite:
    * gpasm/testsuite/gpasm.mchip/listfiles/configX.lst */
-#define IS_PIC16  (state.device.class == PROC_CLASS_PIC16 || state.device.class == PROC_CLASS_PIC16E)
+#define IS_PIC16  (PROC_CLASS_PIC16 == state.device.class  || PROC_CLASS_PIC16E == state.device.class)
 
-  used = gp_processor_byte_to_org(state.device.class, (!IS_PIC16 && state.processor) ?
-    b_range_memory_used(state.i_memory, 0,
-      gp_processor_org_to_byte(state.device.class, state.processor->config_addrs[0])) :
-    b_memory_used(state.i_memory));
-  lst_line("Program Memory %s Used: %5i", IS_16BIT_CORE ? "Bytes" : "Words", used);
-  if (NULL != state.processor && 0 <= state.processor->prog_mem_size)
-    lst_line("Program Memory %s Free: %5u", IS_16BIT_CORE ? "Bytes" : "Words", state.processor->prog_mem_size - used);
+  if (IS_EEPROM) {
+    used = b_memory_used(state.i_memory);
+    lst_line("Memory Bytes Used: %5i", used);
+  }
+  else {
+    used = gp_processor_byte_to_org(state.device.class, (!IS_PIC16 && state.processor) ?
+      b_range_memory_used(state.i_memory, 0,
+        gp_processor_org_to_byte(state.device.class, state.processor->config_addrs[0])) :
+      b_memory_used(state.i_memory));
+    lst_line("Program Memory %s Used: %5i", IS_BYTE ? "Bytes" : "Words", used);
+    if (NULL != state.processor && 0 <= state.processor->prog_mem_size)
+      lst_line("Program Memory %s Free: %5u", IS_BYTE ? "Bytes" : "Words", state.processor->prog_mem_size - used);
+  }
   lst_line("");
 }
 
@@ -546,7 +555,7 @@ lst_data(unsigned int pos, unsigned int byte_org,
   int lst_bytes = 0;
 
   /* when in a idata or byte packed section, print byte by byte */
-  if (state.obj.new_sec_flags & (STYP_DATA | STYP_BPACK)) {
+  if (PROC_CLASS_EEPROM8 == state.device.class || state.obj.new_sec_flags & (STYP_DATA | STYP_BPACK)) {
     while (bytes_emitted > lst_bytes && pos + 3 <= LST_LINENUM_POS) {
       unsigned char emit_byte;
 
@@ -608,7 +617,7 @@ lst_format_line(const char *src_line, int value)
   unsigned int byte_org = 0;
   unsigned int bytes_emitted = 0;
   unsigned int lst_bytes;
-  const char *addr_fmt = IS_16BIT_CORE ? "%06X " : "%04X   ";
+  const char *addr_fmt = IS_16BIT_CORE ? "%06X " : (IS_EEPROM ? "%04X " : "%04X   ");
 #define ADDR_LEN 7
   unsigned int pos = 0;
   unsigned short reloc_type;
